# PHASE

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml  instructions.md  next_steps.MD  plot.ipynb  pyproject.toml  requirements.txt  simulation.ipynb  test.ipynb  test_density_peak.ipynb  validation_ladder2.MD  venv_setup.sh
alloskin/: cli.py
alloskin/analysis/: components.py  qubo.py  qubo_ii.py  qubo_rf.py  static.py  static_ii.py  static_rf.py  tica.py  vamp_pipeline.py
alloskin/features/: extraction.py
alloskin/io/: data.py
alloskin/pipeline/: builder.py  runner.py
alloskin/simulation/: README.md  main.py  metrics.py  plotting.py  potts_model.py  qubo.py  sampling.py
backend/: main.py  tasks.py
backend/services/: __init__.py  backmapping_npz.py  descriptors.py  metastable.py  metastable_clusters.py  preprocessing.py  project_store.py  selection_utils.py  slice_utils.py  state_utils.py
config/: residue_selection.yaml
docs/: clustering_architecture.md  delta_eval_interpretation.md  delta_js_help.md  gibbs_relaxation_help.md  lambda_sweep_help.md  msm.md  pcca.md  potts_beta_eff.md  potts_gibbs.md  potts_model.md  potts_overview.md  potts_pmi_plm.md  qa_benchmark_protocol.md  sampling_viz_help.md
docs/metadata/: analysis.md  cluster.md  descriptors.md  potts_model.md  sample.md  system.md
frontend/: Dockerfile  package.json
frontend/src/: App.jsx
phase/: cli.py
phase/analysis/: static.py
phase/common/: runtime.py  selection_utils.py  types.py  utils.py
phase/features/: extraction.py
phase/io/: data.py  readers.py
phase/pipeline/: builder.py  runner.py  selection_parser.py
phase/potts/: README.md  analysis_run.py  delta_fit.py  main.py  metrics.py  notebook_plots.py  pipeline.py  plotting.py  potts_model.py  qubo.py  sampling.py  sampling_run.py
phase/scripts/: cluster_npz.py  evaluate_state.py  offline_browser.py  offline_system.py  phase_console.py  potts_delta_fit.py  potts_delta_js.py  potts_fit.py  potts_gauge.py  potts_gibbs_relaxation.py  potts_lambda_sweep.py  potts_plots.py  potts_sample.py  potts_utils.py
phase/services/: project_store.py  state_utils.py
phase/simulation/: README.md  delta_fit.py  main.py  metrics.py  pipeline.py  plotting.py  potts_model.py  qubo.py  sampling.py
phase/workflows/: __init__.py  backmapping.py  clustering.py  descriptors.py  macro_states.py  metastable.py
scripts/: cluster_npz.sh  compose_env.sh  debug_sa_init.py  offline_console.sh  offline_select.sh  offline_system.sh  phase_console.sh  potts_delta_fit.sh  potts_delta_js.sh  potts_fit.sh  potts_gibbs_relaxation.sh  potts_lambda_sweep.sh  potts_plots.sh  potts_sampling.sh  potts_setup.sh
tests/: test_clustering_entry.py  test_macro_states.py  test_restore_projects.py
(+70 files in other folders)
