[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phase"
version = "0.1.0"
authors = [
  { name="PHASE Developer", email="dev@example.com" },
]
description = "Modular framework for learning reduced Hamiltonians from MD trajectories and generating conformational ensembles."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# Add core dependencies here
dependencies = [
    "numpy",
    "MDAnalysis",
    "deeptime", # For VAMP analysis
    "torch",
    "pyqubo",
    "dwave-neal",
    "dadapy@git+https://github.com/sissa-data-science/DADApy.git#egg=cluster_predict_develop",
    # "idtxl", # Or "pyJIDT" if you prefer
    "pyyaml",
    "redis", # Added for worker/backend
    "rq"     # Added for worker/backend
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
# This creates the `phase` command
phase = "phase.cli:main"
phase-console = "phase.scripts.phase_console:main"
phase-lambda-sweep = "phase.scripts.potts_lambda_sweep:main"

## This explicitly tells setuptools to *only* look for packages starting with 'phase'
[tool.setuptools.packages.find]
include = ["phase*"]
